--- a/ee_processing.ipynb
+++ b/ee_processing.ipynb
@@ -146,21 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\mod_nodata\\canopy_height_santa_clara_2023.tif\n",
-      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\mod_nodata\\canopy_height_santa_clara_2023.tif\n"
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\mod_nodata\\canopy_height_santa_clara_2023.tif\n"
      ]
     }
    ],
    "source": [
-    "input_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\canopy_height_santa_clara_2023.tif\"\n",
-    "output_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\mod_nodata\\canopy_height_santa_clara_2023.tif\"\n",
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\canopy_height_santa_clara_2023.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\mod_nodata\\canopy_height_santa_clara_2023.tif\"\n",
     "nodata_value = 0\n",
     "\n",
     "# Replace NaN values with nodata_value\n",
@@ -169,20 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\mod_nodata\\canopy_height_silver_city_2023.tif\n"
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\mod_nodata\\canopy_height_silver_city_2023.tif\n"
      ]
     }
    ],
    "source": [
-    "input_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\canopy_height_silver_city_2023.tif\"\n",
-    "output_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\meta\\mod_nodata\\canopy_height_silver_city_2023.tif\"\n",
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\canopy_height_silver_city_2023.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\meta\\mod_nodata\\canopy_height_silver_city_2023.tif\"\n",
     "nodata_value = 0\n",
     "\n",
     "# Replace NaN values with nodata_value\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +209,123 @@
     "# Replace NaN values with nodata_value\n",
     "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\Hurley_LST_Mean_Image2.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\Hurley_LST_Mean_Image2.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\Hurley_LST_Mean_Image2.tif\"\n",
+    "nodata_value = 0\n",
+    "\n",
+    "# Replace NaN values with nodata_value\n",
+    "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\North_Hurley_LST_Mean_Image.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\North_Hurley_LST_Mean_Image.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\North_Hurley_LST_Mean_Image.tif\"\n",
+    "nodata_value = 0\n",
+    "\n",
+    "# Replace NaN values with nodata_value\n",
+    "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\Hurley_LST_Anomaly.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\Hurley_LST_Anomaly.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\post-meds\\data\\signal\\climate\\NM\\LST\\nodata\\Hurley_LST_Anomaly.tif\"\n",
+    "nodata_value = 0\n",
+    "\n",
+    "# Replace NaN values with nodata_value\n",
+    "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\nodata\\Santa_Clara_LST_Mean_Image.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\Santa_Clara_LST_Mean_Image.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\nodata\\Santa_Clara_LST_Mean_Image.tif\"\n",
+    "nodata_value = 0\n",
+    "\n",
+    "# Replace NaN values with nodata_value\n",
+    "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified TIFF file saved as C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\nodata\\Silver_City_LST_Mean_Image.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\Silver_City_LST_Mean_Image.tif\"\n",
+    "output_tif = r\"C:\\Users\\bsf31\\Documents\\data\\NM\\LST\\nodata\\Silver_City_LST_Mean_Image.tif\"\n",
+    "nodata_value = 0\n",
+    "\n",
+    "# Replace NaN values with nodata_value\n",
+    "replace_value_with_nodata(input_tif, output_tif, nodata_value, replace_value=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -347,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
